fix toolbar with logo and aligns of menu

--- a/src/hoc/Layout/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/hoc/Layout/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -1,4 +1,4 @@
-.NavigationItem{
+.NavigationItem {
     margin: 10px 0;
     box-sizing: border-box;
     display: block;
@@ -6,22 +6,21 @@
 }
 
 .NavigationItem a {
-    color: #8f5c2c;
+    color: #8F5C2C;
     text-decoration: none;
     width: 100%;
-    border-bottom: 4px solid transparent;
     box-sizing: border-box;
     display: block;
 }
 
 .NavigationItem a:hover,
 .NavigationItem a:active,
-.NavigationItem a.active{
-    color: #40a4c8;
+.NavigationItem a.active {
+    color: #40A4C8;
 }
 
-@media(min-width : 500px) {
-    .NavigationItem{
+@media (min-width: 500px) {
+    .NavigationItem {
         margin: 0;
         display: flex;
         height: 100%;
@@ -32,17 +31,15 @@
     .NavigationItem a {
         color: white;
         height: 100%;
-        box-sizing: border-box;
-        display: block;
-        padding: 16 10px;
+        padding: 16px 10px;
         border-bottom: 4px solid transparent;
     }
     
     .NavigationItem a:hover,
     .NavigationItem a:active,
-    .NavigationItem a.active{
-        background-color: #8f5c2c;
-        border-bottom: 4px solid #40a4c8;
+    .NavigationItem a.active {
+        background-color: #8F5C2C;
+        border-bottom: 4px solid #40A4C8;
         color: white;
     }
 }
